feat: implement hub event admin crud
